<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SQLite">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="392dp"
            android:layout_height="548dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.415">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mi_base_de_datos_de_libros"
                android:textAlignment="center"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnNewLib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30sp"
                android:text="@string/Nuevo_libro" />

            <Button
                android:id="@+id/btnListadoLib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30sp"
                android:text="@string/Listado_libros" />

            <Button
                android:enabled="false"
                android:id="@+id/btnBuscarLib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30sp"
                android:clickable="false"
                android:text="@string/Buscar_libros"
                android:visibility="visible" />
        </LinearLayout>

        <Button
            android:id="@+id/btnvolver"
            android:layout_width="123dp"
            android:layout_height="55dp"
            android:layout_marginTop="55dp"
            android:text="@string/volver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>