<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_principal"
            android:textSize="30dp"
            android:layout_marginTop="20dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnSQLite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Base_de_Datos_SQLite"
            android:textSize="25dp"
            android:layout_marginTop="50dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnNoticias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Noticias_de..."
            android:textSize="25dp"
            android:layout_marginTop="50dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_gravity="right">

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/Salir"
            android:layout_marginRight="20dp"
            android:textSize="25dp" />


    </LinearLayout>


</LinearLayout>